--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-setuptools
+setuptools>=65.0.0
 wheel
 flask==2.3.2
-pandas==2.0.3
-numpy==1.25.0
+pandas==1.5.3
+numpy==1.24.4
 werkzeug==2.3.6
 jinja2==3.1.2
 itsdangerous==2.1.2
 python-dateutil==2.8.2
 gunicorn
 Flask-SQLAlchemy==3.1.1
-scikit-learn
+scikit-learn==1.2.2
